--- a/mobile/include/css/common.css
+++ b/mobile/include/css/common.css
@@ -139,6 +139,10 @@
   text-decoration: underline;
 }
 
+.bold_600 {
+  font-weight: 600 !important;
+}
+
 .bold {
   font-weight: 700 !important;
 }
