--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -20,7 +20,6 @@
 .allcare .radio_filed .new_radio_item input[type="radio"]:checked {border: 5px solid var(--col_blue);}
 .allcare .radio_filed .new_radio_item input[type="radio"]:disabled:checked {position: relative; border: 1px solid #757575;}
 .allcare .radio_filed .new_radio_item input[type="radio"]:disabled:checked::after {content:''; position: absolute; display: block; background-color: #444; border-radius: 50%; width:12px; height:12px; top: 50%; left: 50%; transform: translate(-50%, -50%);}
-
 .allcare .radio_filed .new_radio_item label {flex: 1;}
 .allcare .radio_filed .new_radio_item label .label_title { display: block; font-size: 16px; font-weight: 500; color: #333; line-height: 24px; }
 .allcare .radio_filed .new_radio_item label .label_text {font-size: 16px; font-weight: 400; color: #333; line-height: 24px; }
@@ -28,6 +27,18 @@
 .allcare .dimmed_pop {z-index: 299; width: 100%; height: 100%; display: block; position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0, 0, 0, 0.16);}
 .allcare .dimmed_pop.dsp-none {display: none;}
 .allcare .newpop_endfixed {position: fixed; background-color: #fff; bottom: 0; left: 50%; transform: translateX(-50%); width: 100%; display: flex; gap: 8px; padding: 24px 20px;}
+
+.allcare input[type="checkbox"].new_chkbox {position: relative; width: 20px; height: 20px; border: 1px solid #757575; border-radius: 4px;}
+.allcare input[type="checkbox"].new_chkbox:checked::before {content: ''; position: absolute; width: 20px; height: 20px; border: 1px solid var(--col_blue); border-radius: 4px; background-color: var(--col_blue);} 
+.support .youth.allcare input[type="checkbox"].new_chkbox:checked::after {content: ''; position: absolute; width: 12px; height: 12px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/support/ico10_chk.svg') no-repeat center / contain;} 
+.mypage .progmg.allcare.allcare input[type="checkbox"].new_chkbox:checked::after {content: ''; position: absolute; width: 12px; height: 12px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/mypage/ico10_chk.svg') no-repeat center / contain;} 
+
+
+.allcare .new_ipt {position: relative;}
+.allcare .new_ipt input {padding: 10px 48px 10px 16px; width: 100%; height: 48px; border: 1px solid #757575; border-radius: 4px;}
+.allcare .new_ipt input[type=text]:read-only,
+.allcare .new_ipt input[type=text]:disabled { background-color: #f5f5f5;}
+.allcare .new_ipt button {background: url('../include/images/ico16_close.svg') no-repeat center / contain; width: 16px; height: 16px; position: absolute; right: 16px; top: 50%; transform: translateY(-50%);}
 
 
 .allcare .mt80 {margin-top: 80px !important;}
@@ -59,15 +70,11 @@
 .allcare .base_border_cont::after {content: ''; position: absolute; bottom: -8px; left: 50%; transform: translateX(-50%); width: calc(100% + 2.5rem); height: 8px; background-color: #f3f5f6;}
 .allcare fieldset {border: none;}
 
-.allcare input[type="checkbox"].new_chkbox {position: relative; width: 20px; height: 20px; border: 1px solid #757575; border-radius: 4px;}
-.allcare input[type="checkbox"].new_chkbox:checked::before {content: ''; position: absolute; width: 20px; height: 20px; border: 1px solid var(--col_blue); border-radius: 4px; background-color: var(--col_blue);} 
-.support .youth.allcare input[type="checkbox"].new_chkbox:checked::after {content: ''; position: absolute; width: 12px; height: 12px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/support/ico10_chk.svg') no-repeat center / contain;} 
-.mypage .progmg.allcare.allcare input[type="checkbox"].new_chkbox:checked::after {content: ''; position: absolute; width: 12px; height: 12px; left: 50%; top: 50%; transform: translate(-50%, -50%); background: url('../images/mypage/ico10_chk.svg') no-repeat center / contain;} 
 
 .allcare .prog_list_sec {padding: 24px 20px 0;}
 .allcare .prog_list_sec .board_header {padding-bottom: 16px; align-items: center;}
-.allcare .prog_list_sec .board_header .count span {font-size: 16px; line-height: 28px; color: #333; font-weight: 400;}
-.allcare .prog_list_sec .board_header > p strong {font-size: 16px; line-height: 28px; color: var(--col_blue); font-weight: 600}
+.allcare .prog_list_sec .board_header .count span {font-size: 14px; line-height: 28px; color: #333; font-weight: 400;}
+.allcare .prog_list_sec .board_header > p strong {font-size: 14px; line-height: 28px; color: var(--col_blue); font-weight: 600}
 .allcare .disabled {display: none;}
 
 .allcare .t1_sb { display: flex; align-items: center; height: 44px;}
@@ -216,9 +223,6 @@
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap >div:last-child .dd {margin-bottom: 0;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_group {display: flex; width: 100%; gap: 8px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_group .cell {width: calc(100% - 60px); line-height: initial;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_group .cell .new_ipt {position: relative;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_group .cell .new_ipt input {padding: 10px 48px 10px 16px; width: 100%; height: 48px; border: 1px solid #757575; border-radius: 4px; background-color: #f5f5f5;}
-.mypage .progmg.allcare .my_ptcp_from .box_table_group .cell .new_ipt button {background: url('../include/images/ico16_close.svg') no-repeat center / contain; width: 16px; height: 16px; position: absolute; right: 16px; top: 50%; transform: translateY(-50%);}
 .mypage .progmg.allcare .my_ptcp_from .box_table_group>button.btnSearch {width: 60px; height: 48px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dl_person dd {margin: 12px 0 16px;}
 .mypage .progmg.allcare .my_ptcp_from .box_table_wrap .dl_id input {width: 100%; height: 48px; color: #555; font-size: 16px; line-height: 28px; font-weight: 400; padding: 10px 16px; border: 1px solid #757575; border-radius: 4px;}
@@ -449,7 +453,7 @@
 .mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action button {padding: 10px 0; width: 100%;}
 .mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action button span {position: relative; padding-right: 20px; font-size: 14px; color: #333; line-height: 24px; font-weight: 400;}
 .mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_header .apply_summary_action button span::after {content: ''; position: absolute; right: 0; top: 50%; transform: translateY(-50%); width: 16px; height: 16px; background: url('../images/mypage/ico16_line_right_filled.svg') no-repeat center / contain;}
-.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul {height: 256px; overflow: auto; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; margin: 0 16px 24px; padding: 24px;} 
+.mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul {max-height: 256px; overflow: auto; border: 1px solid #ddd; border-radius: 8px; background-color: #fff; margin: 0 16px 24px; padding: 24px;} 
 .mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li + li {margin-top: 8px;}
 .mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li .apply_summary_status {display: flex;  justify-content: space-between; font-size: 14px;}
 .mypage .progmg.allcare .prog_wrap.prog_applysummary .apply_summary_inner ul li .apply_summary_status p {font-size: 14px; line-height: 24px; color: #555; font-weight: 400;}
@@ -492,6 +496,8 @@
 .mypage .progmg.allcare .full_box form fieldset .form_group::after  {pointer-events: none; content: ''; position: absolute; right: 12px; top: 50%; transform: translateY(-50%); background: url('../include/images/arrow16_down.svg') no-repeat center / contain; width: 16px; height: 16px;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec {padding: 0;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec .board_header {border-bottom: 1px solid #eee; padding-bottom: 8px;}
+.mypage .progmg.allcare .prog_list_sec.prg_spec .board_header .count { font-size: 14px;;}
+.mypage .progmg.allcare .prog_list_sec.prg_spec .board_header .year { font-size: 14px;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item {padding: 16px 0; border-bottom: 1px solid #eee;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item dl .data_group {display: flex; gap: 12px;}
 .mypage .progmg.allcare .prog_list_sec.prg_spec .prog_item dl .data_group + .data_group {margin-top: 4px;}
@@ -534,4 +540,26 @@
 .mypage .progmg.allcare .formbox .date { display: block;}
 .mypage .progmg.allcare .formbox .btn { margin: 12px 0;} 
 
+/* 빌드업 - 상담이력_목록 (UI_ADHPCcM01) */
+.mypage .progmg.allcare .robd_list .item { margin-top: -1px; padding: 20px 16px; border: 1px solid var(--col_btn); border-radius: 4px;}
+.mypage .progmg.allcare .robd_list .item ~ .item { margin-top: 8px;}
+.mypage .progmg.allcare .robd_list .item_ul li { display: flex; align-items: center; height: 24px;}
+.mypage .progmg.allcare .robd_list .item_ul li ~ li { margin-top: 4px;}
+.mypage .progmg.allcare .robd_list .item_ul li .dt { width: 100px; font-size: 14px; color: var(--col_p);}
+.mypage .progmg.allcare .robd_list .item_ul li .dd { flex: 1; margin-left: 12px; font-size: 14px;}
+.mypage .progmg.allcare .robd_list .item_btn { display: flex; align-items: center; justify-content: space-between; width: 100%; margin-top: 16px;}
+.mypage .progmg.allcare .robd_list .item_btn span { display: block; font-size: 16px; font-weight: 600;}
+.mypage .progmg.allcare .robd_list .item_btn .icon { display: block; width: 16px; height: 16px; background: url('../images/mypage/ico16_line_right_filled.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .robd_list .item_btn[aria-expanded="true"] .icon { transform: rotate(180deg);}
+.mypage .progmg.allcare .robd_list .item_consult { margin-top: 16px; padding: 16px; background-color: #f8f8f8; border-radius: 8px;}
+.mypage .progmg.allcare .robd_list .item_consult li { display: flex; align-items: center; height: 24px;}
+.mypage .progmg.allcare .robd_list .item_consult li ~ li { margin-top: 4px;}
+.mypage .progmg.allcare .robd_list .item_consult li .dt { width: 80px; font-size: 14px; color: var(--col_p);}
+.mypage .progmg.allcare .robd_list .item_consult li .dd { flex: 1; margin-left: 12px; font-size: 14px;}
+.mypage .progmg.allcare .robd_list .item_no {width: 100%; background-color: #f5f6f8; padding: 40px 16px; border-radius: 8px;}
+.mypage .progmg.allcare .robd_list .item_no .icon {display: block; width: 56.65px; height: 60px; margin: 0 auto; background: url('../images/mypage/ico60_app-form.svg') no-repeat center / contain;}
+.mypage .progmg.allcare .robd_list .item_no .inner_contents_txt {text-align: center;}
+.mypage .progmg.allcare .robd_list .item_no .inner_contents_txt .desc {font-size: 16px; color: #333; font-weight: 600; line-height: 28px;}
+.mypage .progmg.allcare .robd_list .item_no .inner_contents_txt .desc time { font-size: 16px; font-weight: 600; color: var(--col_blue);}
+.mypage .progmg.allcare .robd_list .item_no .inner_contents_txt .reconfirm {font-size: 16px; color: #333; font-weight: 400; line-height: 28px;}
 
