--- a/pc/css/contents.css
+++ b/pc/css/contents.css
@@ -910,6 +910,9 @@
 .mypage .progmg.allcare input.money_amount {text-align: right;}
 
 
+/* [팝업] 구직활동팝업 (UI_ADHPChP03) */
+.allcare_popup.new_popup .newpop_inner .plantog_wrap + .plantog_wrap {margin-top: 24px;}
+
 /* [팝업] 부정수급 방지 확인서 (UI_ADHPChP04) */
 .allcare_popup.new_popup .commitment_htit {font-size: 20px; color: #333; font-weight: 600; line-height: 30px;}
 .allcare_popup.new_popup .commitment_list_wrap {border: 1px solid #ddd; border-radius: 8px; padding: 16px;}
