--- a/mobile/css/contents.css
+++ b/mobile/css/contents.css
@@ -625,7 +625,7 @@
 
 /* 점프업_IAP결과관리_수정(보완요청_제출후)	(UI_ADHPCgM05) */
 
-/* PC_점프업 - 포인트관리_목록 (UI_ADHPChM01) */
+/* 점프업 - 포인트관리_목록 (UI_ADHPChM01) */
 
 /* 점프업 - 포인트신청관리_신청(등록) (UI_ADHPChM02) */
 
